--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -358,6 +358,10 @@ main {
   color: #3E788A;
 }
 
+.lego-selected h4:hover {
+  cursor: pointer;
+}
+
 .lego-unselected h4 {
   color: #C4C4C4;
   font-weight: normal;
@@ -398,10 +402,10 @@ main {
 }
 
 #companies-box p {
-  color: white;
   margin: 0;
   font-size: .7rem;
 }
+
 .company {
   width: 20%;
   padding-bottom: 20%;
@@ -439,7 +443,7 @@ main {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.company div, .company-selected div, .company-blue div {
+.logo-container {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -451,25 +455,15 @@ main {
   width: 100%;
 }
 
-#filters-and-details {
-  /* background-color: white; */
+#filters {
+  width: 40%;
   border-style: solid;
   border-color: #3E788A;
-  border-width: .2rem;
-  width: 40%;
-  /* padding: .5rem; */
-  display: flex;
-  flex-direction: column;
-}
-
-#filters {
   background-color: white;
   padding: .5rem;
-  height: 70%;
-  margin-bottom: .3rem;
   display: flex;
   flex-direction: column;
-  border-radius: 0 0 0 1rem;
+  /* border-radius: 0 0 0 1rem; */
 }
 
 .filters-row {
@@ -666,13 +660,13 @@ main {
   color: #3E8A76;
 }
 
-.lego-box {
+#lego-box {
   display: flex;
   align-items: center;
   margin-bottom: 1rem;
 }
 
-.lego-box img {
+#lego-box img {
   height: 1rem;
   width: auto;
   margin-right: .5rem;
@@ -680,6 +674,37 @@ main {
 
 #selected-companies {
   margin-bottom: 3rem;
+}
+
+.popup {
+  height: auto;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  position: absolute;
+  width: 15rem;
+  background-color: white;
+  left: 3rem;
+  border: solid;
+  top: 2rem;
+  border-color: #8bde22;
+  border-radius: .5rem;
+  z-index: 1;
+  padding: .5rem .5rem 3rem .5rem;
+  color: black;
+}
+
+.popup h3 {
+  font-size: .8rem;
+  width: 95%;
+  margin: 0 0 .5rem 0;
+}
+
+.popup-icon {
+  width: .8rem;
+  position: absolute;
+  right: .5rem;
+  top: .5rem;
 }
 
 .btn-deselected:hover {
