--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -469,22 +469,22 @@ main {
 
 .filters-row {
   display: flex;
-  align-items: baseline;
+  align-items: center;
   margin-bottom: 1rem;
 }
 
 .filters-row h3 {
   font-size: .7rem;
   font-weight: normal;
-  margin: 0;
-  width: 40%;
+  margin: 0 .3rem 0 0;
+  width: 35%;
 }
 
 .filters-box {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  width: 60%;
+  width: 65%;
 }
 
 .filter {
@@ -544,11 +544,11 @@ main {
 }
 
 #company-add-btn {
+  background-color: #0CC8F1;
+  color: white;
   text-decoration: none;
   border: none;
-  background-color: white;
   padding: .3rem .5rem .3rem .5rem;
-  color: #0CC8F1;
   font-weight: bold;
   font-size: .7rem;
   align-self: flex-end;
@@ -558,8 +558,6 @@ main {
 }
 
 #company-add-btn:hover {
-  background-color: #0CC8F1;
-  color: white;
   cursor: pointer;
 }
 
@@ -688,7 +686,7 @@ main {
   align-items: flex-start;
   flex-direction: column;
   position: absolute;
-  width: 15rem;
+  width: 20rem;
   background-color: white;
   left: 4rem;
   border: solid;
@@ -698,6 +696,16 @@ main {
   z-index: 1;
   padding: .5rem .5rem 3rem .5rem;
   color: black;
+}
+
+.popup a {
+  text-decoration: none;
+  font-weight: bold;
+  color: #3E788A;
+}
+
+.popup a:hover {
+  text-decoration: underline;
 }
 
 .popup h3 {
