--- a/www/styles/style-pdf.css
+++ b/www/styles/style-pdf.css
@@ -19,6 +19,17 @@ header {
   margin-bottom: 1rem;
 }
 
+a {
+  font-weight: bold;
+  color: #3E788A;
+  text-decoration: none;
+}
+
+a:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
 .break {
   page-break-after: always;
 }
