--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -363,8 +363,8 @@ main {
 }
 
 .lego-unselected h4 {
-  color: #C4C4C4;
-  font-weight: normal;
+  color: #CDCDCD;
+  /* font-weight: normal; */
   transition: color 200ms;
 }
 
@@ -516,31 +516,9 @@ main {
   background-color: #3E788A;
 }
 
-#company-details {
-  display: flex;
-  flex-direction: column;
-  height: 30%;
-  padding: .5rem;
-  background-color: white;
-  border-style: solid;
-  border-color: #8BDE22;
-  position: relative;
-  border-radius: .5rem;
-}
-
 #filters h1 {
-  margin: 0 0 1rem 0;
+  margin: 0 0 .3rem 0;
   color: #3E788A;
-}
-
-#company-details h1 {
-  margin: 0 0 1rem 0;
-  color: black;
-}
-
-#company-details p {
-  font-size: .7rem;
-  margin: 0;
 }
 
 #company-add-btn {
@@ -714,11 +692,27 @@ main {
   margin: 0 0 .5rem 0;
 }
 
-.popup-icon {
+.popup-x {
   width: .8rem;
   position: absolute;
   right: .5rem;
   top: .5rem;
+}
+
+.popup-x:hover {
+  cursor: pointer;
+}
+
+.socials-container {
+  display: flex;
+  position: absolute;
+  bottom: .5rem;
+  width: 8rem;
+  justify-content: space-between;
+}
+
+.popup-icon {
+  width: 1.5rem;
 }
 
 .popup-icon:hover {
@@ -728,6 +722,36 @@ main {
 .btn-deselected:hover {
   text-decoration: none !important;
   cursor: default !important;
+}
+
+.background-checkmark {
+  background-image: url("../images/icons/check-gray.png");
+  background-size: 1.2rem;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: .8rem;
+  width: .8rem;
+  border-radius: 0 !important;
+}
+
+.background-checkmark:hover {
+  background-image: url("../images/icons/check-blue.png");
+}
+
+.background-checkmark-selected {
+  background-image: url("../images/icons/check-white.png");
+  background-size: 1.2rem;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: .8rem;
+  width: .8rem;
+  border-radius: 0 !important;
+}
+
+.filter-description {
+  margin: 0 0 1rem 0;
+  font-size: .6rem;
+  font-weight: normal;
 }
 
 .hidden {
